--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "react": "18.2.0",
     "react-native": "0.73.2",
     "react-native-date-picker": "^4.3.6",
-    "react-native-element-dropdown": "^2.10.1"
+    "react-native-element-dropdown": "^2.10.1",
+    "react-native-reanimated": "^1.13.4",
+    "react-native-router-flux": "^4.3.1",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.29.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
