--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.17",
+    "@react-native-community/datetimepicker": "^7.6.2",
     "expo": "~50.0.5",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.2",
     "react-native-date-picker": "^4.3.6",
-    "react-native-element-dropdown": "^2.10.1"
+    "react-native-element-dropdown": "^2.10.1",
+    "react-native-elements": "^3.4.3",
+    "react-native-modal-datetime-picker": "^17.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
