--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-date-picker": "^4.3.6",
     "react-native-element-dropdown": "^2.10.1",
     "react-native-elements": "^3.4.3",
+    "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-maps": "^1.11.3",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-safe-area-context": "^4.9.0",
