--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-native-maps": "^1.11.3",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-safe-area-context": "^4.9.0",
-    "react-native-screens": "^3.29.0"
+    "react-native-screens": "^3.29.0",
+    "react-native-searchable-dropdown": "^1.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
