--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.6.7",
     "expo": "~50.0.5",
     "expo-status-bar": "~1.11.1",
+    "navigation": "^6.2.0",
     "react": "18.2.0",
     "react-native": "0.73.2",
     "react-native-date-picker": "^4.3.6",
