Implementing payment gateway interface

--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
     "axios": "^1.6.7",
+    "concurrently": "^8.2.2",
+    "dotenv": "^16.4.5",
     "expo": "~50.0.5",
     "expo-status-bar": "~1.11.1",
-    "react": "18.2.0",
+    "node-fetch": "^3.3.2",
+    "paypal": "^1.0.1",
+    "react": "^18.2.0",
     "react-native": "0.73.2",
     "react-native-date-picker": "^4.3.6",
     "react-native-element-dropdown": "^2.10.1",
