--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/datetimepicker": "^7.6.2",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
+    "@stripe/stripe-react-native": "^0.37.1",
     "axios": "^1.6.7",
     "concurrently": "^8.2.2",
     "dotenv": "^16.4.5",
@@ -20,7 +21,6 @@
     "expo-status-bar": "~1.11.1",
     "navigation": "^6.2.0",
     "node-fetch": "^3.3.2",
-    "paypal": "^1.0.1",
     "react": "^18.2.0",
     "react-native": "0.73.2",
     "react-native-date-picker": "^4.3.6",
