--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,6 +8,12 @@
   <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
   <!-- END OPTIONAL PERMISSIONS -->
+  <!-- This permission allow the app to find out exactly where the user is, 
+  this will use if enableHighAccuracy=true -->
+  <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+  <!-- This permission allow the app to get a rough idea of where the user is, 
+  this will use if enableHighAccuracy=false -->
+  <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 
   <queries>
     <!-- Support checking for http(s) links via the Linking API -->
