--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "concurrently": "^8.2.2",
     "dotenv": "^16.4.5",
     "expo": "~50.0.5",
+    "expo-image-picker": "^14.7.1",
     "expo-status-bar": "~1.11.1",
     "fs": "^0.0.1-security",
     "navigation": "^6.2.0",
@@ -31,6 +32,7 @@
     "react-native-dotenv": "^3.4.11",
     "react-native-element-dropdown": "^2.10.1",
     "react-native-elements": "^3.4.3",
+    "react-native-emoji-selector": "^0.2.0",
     "react-native-get-location": "^4.0.1",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-maps": "^1.11.3",
