--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-image-picker": "^14.7.1",
     "expo-status-bar": "~1.11.1",
     "fs": "^0.0.1-security",
+    "jwt-decode": "^4.0.0",
     "navigation": "^6.2.0",
     "node-fetch": "^3.3.2",
     "nodemon": "^3.1.0",
